netfilter: nf_tables: reject duplicate device on updates (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12216,6 +12216,7 @@
 	patches.kernel.org/6.12.59-095-fs-namespace-correctly-handle-errors-returned.patch
 	patches.kernel.org/6.12.59-096-sched_ext-Fix-unsafe-locking-in-the-scx_dump_.patch
 	patches.kernel.org/6.12.59-097-Revert-netfilter-nf_tables-Reintroduce-shorte.patch
+	patches.kernel.org/6.12.59-098-netfilter-nf_tables-reject-duplicate-device-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
