LoongArch: Use physical addresses for CSR_MERRENTRY/CSR_TLBRENTRY (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12257,6 +12257,7 @@
 	patches.kernel.org/6.12.59-136-x86-microcode-AMD-Add-Zen5-model-0x44-steppin.patch
 	patches.kernel.org/6.12.59-137-selftests-user_events-fix-type-cast-for-write.patch
 	patches.kernel.org/6.12.59-138-ftrace-Fix-BPF-fexit-with-livepatch.patch
+	patches.kernel.org/6.12.59-139-LoongArch-Use-physical-addresses-for-CSR_MERR.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
