--- a/series.conf
+++ b/series.conf
@@ -12219,6 +12219,7 @@
 	patches.kernel.org/6.12.59-098-netfilter-nf_tables-reject-duplicate-device-o.patch
 	patches.kernel.org/6.12.59-099-arm64-dts-rockchip-Set-correct-pinctrl-for-I2.patch
 	patches.kernel.org/6.12.59-100-arm64-dts-rockchip-Make-RK3588-GPU-OPP-table-.patch
+	patches.kernel.org/6.12.59-101-ARM-dts-imx51-zii-rdu1-Fix-audmux-node-names.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
