io_uring/napi: fix io_napi_entry RCU accesses (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12290,6 +12290,7 @@
 	patches.kernel.org/6.12.59-169-KVM-VMX-Split-out-guts-of-EPT-violation-to-co.patch
 	patches.kernel.org/6.12.59-170-KVM-VMX-Fix-check-for-valid-GVA-on-an-EPT-vio.patch
 	patches.kernel.org/6.12.59-171-ALSA-hda-Fix-missing-pointer-check-in-hda_com.patch
+	patches.kernel.org/6.12.59-172-io_uring-napi-fix-io_napi_entry-RCU-accesses.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
