KVM: VMX: Fix check for valid GVA on an EPT violation (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12288,6 +12288,7 @@
 	patches.kernel.org/6.12.59-167-net-netpoll-flush-skb-pool-during-cleanup.patch
 	patches.kernel.org/6.12.59-168-net-netpoll-fix-incorrect-refcount-handling-c.patch
 	patches.kernel.org/6.12.59-169-KVM-VMX-Split-out-guts-of-EPT-violation-to-co.patch
+	patches.kernel.org/6.12.59-170-KVM-VMX-Fix-check-for-valid-GVA-on-an-EPT-vio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
