proc: fix the issue of proc_mem_open returning NULL (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12204,6 +12204,7 @@
 	patches.kernel.org/6.12.59-083-bpf-account-for-current-allocated-stack-depth.patch
 	patches.kernel.org/6.12.59-084-irqchip-riscv-intc-Add-missing-free-callback-.patch
 	patches.kernel.org/6.12.59-085-wifi-ath11k-Clear-affinity-hint-before-callin.patch
+	patches.kernel.org/6.12.59-086-proc-fix-the-issue-of-proc_mem_open-returning.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
