net: netpoll: fix incorrect refcount handling causing incorrect cleanup (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12286,6 +12286,7 @@
 	patches.kernel.org/6.12.59-165-KVM-guest_memfd-Remove-bindings-on-memslot-de.patch
 	patches.kernel.org/6.12.59-166-net-netpoll-Individualize-the-skb-pool.patch
 	patches.kernel.org/6.12.59-167-net-netpoll-flush-skb-pool-during-cleanup.patch
+	patches.kernel.org/6.12.59-168-net-netpoll-fix-incorrect-refcount-handling-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
