drm/amdgpu: disable peer-to-peer access for DCC-enabled GC12 VRAM surfaces (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12267,6 +12267,7 @@
 	patches.kernel.org/6.12.59-146-btrfs-do-not-update-last_log_commit-when-logg.patch
 	patches.kernel.org/6.12.59-147-btrfs-release-root-after-error-in-data_reloc_.patch
 	patches.kernel.org/6.12.59-148-drm-amdkfd-relax-checks-for-over-allocation-o.patch
+	patches.kernel.org/6.12.59-149-drm-amdgpu-disable-peer-to-peer-access-for-DC.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
