drm/amdkfd: relax checks for over allocation of save area (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12266,6 +12266,7 @@
 	patches.kernel.org/6.12.59-145-btrfs-scrub-put-bio-after-errors-in-scrub_rai.patch
 	patches.kernel.org/6.12.59-146-btrfs-do-not-update-last_log_commit-when-logg.patch
 	patches.kernel.org/6.12.59-147-btrfs-release-root-after-error-in-data_reloc_.patch
+	patches.kernel.org/6.12.59-148-drm-amdkfd-relax-checks-for-over-allocation-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
