hostfs: Fix only passing host root in boot stage with new mount (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12210,6 +12210,7 @@
 	patches.kernel.org/6.12.59-089-ext4-fix-out-of-bound-read-in-ext4_xattr_inod.patch
 	patches.kernel.org/6.12.59-090-Bluetooth-MGMT-Fix-possible-UAFs.patch
 	patches.kernel.org/6.12.59-091-f2fs-fix-to-avoid-overflow-while-left-shift-o.patch
+	patches.kernel.org/6.12.59-092-hostfs-Fix-only-passing-host-root-in-boot-sta.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
