--- a/series.conf
+++ b/series.conf
@@ -12236,6 +12236,7 @@
 	patches.kernel.org/6.12.59-115-ksm-use-range-walk-function-to-jump-over-hole.patch
 	patches.kernel.org/6.12.59-116-strparser-Fix-signed-unsigned-mismatch-bug.patch
 	patches.kernel.org/6.12.59-117-dma-mapping-benchmark-Restore-padding-to-ensu.patch
+	patches.kernel.org/6.12.59-118-LoongArch-Use-correct-accessor-to-read-FWPC-M.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
