--- a/series.conf
+++ b/series.conf
@@ -12294,6 +12294,7 @@
 	patches.kernel.org/6.12.59-173-rust-kbuild-treat-build_error-and-rustdoc-as-.patch
 	patches.kernel.org/6.12.59-174-rust-kbuild-workaround-rustdoc-doctests-modif.patch
 	patches.kernel.org/6.12.59-175-uio_hv_generic-Set-event-for-all-channels-on-.patch
+	patches.kernel.org/6.12.59-176-mm-memory-do-not-populate-page-table-entries-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
