net: phy: micrel: lan8814 fix reset of the QSGMII interface (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12154,6 +12154,7 @@
 	patches.kernel.org/6.12.59-033-net-fec-correct-rx_bytes-statistic-for-the-ca.patch
 	patches.kernel.org/6.12.59-034-net-phy-micrel-Introduce-lanphy_modify_page_r.patch
 	patches.kernel.org/6.12.59-035-net-phy-micrel-Replace-hardcoded-pages-with-d.patch
+	patches.kernel.org/6.12.59-036-net-phy-micrel-lan8814-fix-reset-of-the-QSGMI.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
