--- a/series.conf
+++ b/series.conf
@@ -12160,6 +12160,7 @@
 	patches.kernel.org/6.12.59-039-Bluetooth-MGMT-cancel-mesh-send-timer-when-hd.patch
 	patches.kernel.org/6.12.59-040-Bluetooth-btusb-reorder-cleanup-in-btusb_disc.patch
 	patches.kernel.org/6.12.59-041-Bluetooth-6lowpan-reset-link-local-header-on-.patch
+	patches.kernel.org/6.12.59-042-Bluetooth-6lowpan-fix-BDADDR_LE-vs-ADDR_LE_DE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
