virtio-fs: fix incorrect check for fsvq->kobj (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12212,6 +12212,7 @@
 	patches.kernel.org/6.12.59-091-f2fs-fix-to-avoid-overflow-while-left-shift-o.patch
 	patches.kernel.org/6.12.59-092-hostfs-Fix-only-passing-host-root-in-boot-sta.patch
 	patches.kernel.org/6.12.59-093-mtd-onenand-Pass-correct-pointer-to-IRQ-handl.patch
+	patches.kernel.org/6.12.59-094-virtio-fs-fix-incorrect-check-for-fsvq-kobj.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
