--- a/series.conf
+++ b/series.conf
@@ -12201,6 +12201,7 @@
 	patches.kernel.org/6.12.59-080-ALSA-usb-audio-Fix-NULL-pointer-dereference-i.patch
 	patches.kernel.org/6.12.59-081-acpi-hmat-Fix-lockdep-warning-for-hmem_regist.patch
 	patches.kernel.org/6.12.59-082-bpf-Add-bpf_prog_run_data_pointers.patch
+	patches.kernel.org/6.12.59-083-bpf-account-for-current-allocated-stack-depth.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
