RISC-V: clear hot-unplugged cores from all task mm_cpumasks to avoid rfence errors (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12131,6 +12131,7 @@
 	patches.kernel.org/6.12.59-010-arm64-kprobes-check-the-return-value-of-set_m.patch
 	patches.kernel.org/6.12.59-011-compiler_types-Move-unused-static-inline-func.patch
 	patches.kernel.org/6.12.59-012-riscv-Build-loader.bin-exclusively-for-Canaan.patch
+	patches.kernel.org/6.12.59-013-RISC-V-clear-hot-unplugged-cores-from-all-tas.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
