mm/shmem: fix THP allocation and fallback loop (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12244,6 +12244,7 @@
 	patches.kernel.org/6.12.59-123-wifi-mac80211-reject-address-change-while-con.patch
 	patches.kernel.org/6.12.59-124-fs-proc-fix-uaf-in-proc_readdir_de.patch
 	patches.kernel.org/6.12.59-125-mm-mm_init-fix-hash-table-order-logging-in-al.patch
+	patches.kernel.org/6.12.59-126-mm-shmem-fix-THP-allocation-and-fallback-loop.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
