--- a/series.conf
+++ b/series.conf
@@ -12208,6 +12208,7 @@
 	patches.kernel.org/6.12.59-087-ext4-introduce-ITAIL-helper.patch
 	patches.kernel.org/6.12.59-088-lib-crypto-arm-curve25519-Disable-on-CPU_BIG_.patch
 	patches.kernel.org/6.12.59-089-ext4-fix-out-of-bound-read-in-ext4_xattr_inod.patch
+	patches.kernel.org/6.12.59-090-Bluetooth-MGMT-Fix-possible-UAFs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
