--- a/series.conf
+++ b/series.conf
@@ -12296,6 +12296,7 @@
 	patches.kernel.org/6.12.59-175-uio_hv_generic-Set-event-for-all-channels-on-.patch
 	patches.kernel.org/6.12.59-176-mm-memory-do-not-populate-page-table-entries-.patch
 	patches.kernel.org/6.12.59-177-mm-truncate-unmap-large-folio-on-split-failur.patch
+	patches.kernel.org/6.12.59-178-mm-secretmem-fix-use-after-free-race-in-fault.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
