--- a/series.conf
+++ b/series.conf
@@ -12139,6 +12139,7 @@
 	patches.kernel.org/6.12.59-018-drm-amdgpu-Fix-NULL-pointer-dereference-in-VR.patch
 	patches.kernel.org/6.12.59-019-NFS4-Fix-state-renewals-missing-after-boot.patch
 	patches.kernel.org/6.12.59-020-NFS4-Apply-delay_retrans-to-async-operations.patch
+	patches.kernel.org/6.12.59-021-HID-quirks-avoid-Cooler-Master-MM712-dongle-w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
