arm64: kprobes: check the return value of set_memory_rox() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12128,6 +12128,7 @@
 	patches.kernel.org/6.12.59-007-drm-xe-guc-Synchronize-Dead-CT-worker-with-un.patch
 	patches.kernel.org/6.12.59-008-drm-xe-Move-declarations-under-conditional-br.patch
 	patches.kernel.org/6.12.59-009-drm-xe-Do-clean-shutdown-also-when-using-flr.patch
+	patches.kernel.org/6.12.59-010-arm64-kprobes-check-the-return-value-of-set_m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
