EDAC/altera: Handle OCRAM ECC enable after warm reset (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12258,6 +12258,7 @@
 	patches.kernel.org/6.12.59-137-selftests-user_events-fix-type-cast-for-write.patch
 	patches.kernel.org/6.12.59-138-ftrace-Fix-BPF-fexit-with-livepatch.patch
 	patches.kernel.org/6.12.59-139-LoongArch-Use-physical-addresses-for-CSR_MERR.patch
+	patches.kernel.org/6.12.59-140-EDAC-altera-Handle-OCRAM-ECC-enable-after-war.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
