--- a/series.conf
+++ b/series.conf
@@ -12198,6 +12198,7 @@
 	patches.kernel.org/6.12.59-077-NFS-sysfs-fix-leak-when-nfs_client-kobject-ad.patch
 	patches.kernel.org/6.12.59-078-NFSv4-Fix-an-incorrect-parameter-when-calling.patch
 	patches.kernel.org/6.12.59-079-NFS-Fix-LTP-test-failures-when-timestamps-are.patch
+	patches.kernel.org/6.12.59-080-ALSA-usb-audio-Fix-NULL-pointer-dereference-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
