--- a/series.conf
+++ b/series.conf
@@ -12177,6 +12177,7 @@
 	patches.kernel.org/6.12.59-056-net-mlx5e-Fix-maxrate-wraparound-in-threshold.patch
 	patches.kernel.org/6.12.59-057-net-mlx5e-Fix-wraparound-in-rate-limiting-for.patch
 	patches.kernel.org/6.12.59-058-net-mlx5e-Fix-potentially-misleading-debug-me.patch
+	patches.kernel.org/6.12.59-059-net_sched-limit-try_bulk_dequeue_skb-batches.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
