irqchip/riscv-intc: Add missing free() callback in riscv_intc_domain_ops (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12202,6 +12202,7 @@
 	patches.kernel.org/6.12.59-081-acpi-hmat-Fix-lockdep-warning-for-hmem_regist.patch
 	patches.kernel.org/6.12.59-082-bpf-Add-bpf_prog_run_data_pointers.patch
 	patches.kernel.org/6.12.59-083-bpf-account-for-current-allocated-stack-depth.patch
+	patches.kernel.org/6.12.59-084-irqchip-riscv-intc-Add-missing-free-callback-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
