pmdomain: samsung: plug potential memleak during probe (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12270,6 +12270,7 @@
 	patches.kernel.org/6.12.59-149-drm-amdgpu-disable-peer-to-peer-access-for-DC.patch
 	patches.kernel.org/6.12.59-150-pmdomain-arm-scmi-Fix-genpd-leak-on-provider-.patch
 	patches.kernel.org/6.12.59-151-pmdomain-imx-Fix-reference-count-leak-in-imx_.patch
+	patches.kernel.org/6.12.59-152-pmdomain-samsung-plug-potential-memleak-durin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
