--- a/series.conf
+++ b/series.conf
@@ -12121,6 +12121,7 @@
 	patches.kernel.org/6.12.58-562-Linux-6.12.58.patch
 	patches.kernel.org/6.12.59-001-drm-mediatek-Add-pm_runtime-support-for-GCE-p.patch
 	patches.kernel.org/6.12.59-002-drm-i915-Avoid-lock-inversion-when-pinning-to.patch
+	patches.kernel.org/6.12.59-003-drm-i915-Fix-conversion-between-clock-ticks-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
