--- a/series.conf
+++ b/series.conf
@@ -12252,6 +12252,7 @@
 	patches.kernel.org/6.12.59-131-codetag-debug-handle-existing-CODETAG_EMPTY-i.patch
 	patches.kernel.org/6.12.59-132-crash-fix-crashkernel-resource-shrink.patch
 	patches.kernel.org/6.12.59-133-crypto-hisilicon-qm-Fix-device-reference-leak.patch
+	patches.kernel.org/6.12.59-134-smb-client-fix-cifs_pick_channel-when-channel.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
