drm/amdgpu: remove two invalid BUG_ON()s (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12133,6 +12133,7 @@
 	patches.kernel.org/6.12.59-012-riscv-Build-loader.bin-exclusively-for-Canaan.patch
 	patches.kernel.org/6.12.59-013-RISC-V-clear-hot-unplugged-cores-from-all-tas.patch
 	patches.kernel.org/6.12.59-014-riscv-acpi-avoid-errors-caused-by-probing-DT-.patch
+	patches.kernel.org/6.12.59-015-drm-amdgpu-remove-two-invalid-BUG_ON-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
