--- a/series.conf
+++ b/series.conf
@@ -12291,6 +12291,7 @@
 	patches.kernel.org/6.12.59-170-KVM-VMX-Fix-check-for-valid-GVA-on-an-EPT-vio.patch
 	patches.kernel.org/6.12.59-171-ALSA-hda-Fix-missing-pointer-check-in-hda_com.patch
 	patches.kernel.org/6.12.59-172-io_uring-napi-fix-io_napi_entry-RCU-accesses.patch
+	patches.kernel.org/6.12.59-173-rust-kbuild-treat-build_error-and-rustdoc-as-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
