--- a/series.conf
+++ b/series.conf
@@ -12129,6 +12129,7 @@
 	patches.kernel.org/6.12.59-008-drm-xe-Move-declarations-under-conditional-br.patch
 	patches.kernel.org/6.12.59-009-drm-xe-Do-clean-shutdown-also-when-using-flr.patch
 	patches.kernel.org/6.12.59-010-arm64-kprobes-check-the-return-value-of-set_m.patch
+	patches.kernel.org/6.12.59-011-compiler_types-Move-unused-static-inline-func.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
