--- a/series.conf
+++ b/series.conf
@@ -12285,6 +12285,7 @@
 	patches.kernel.org/6.12.59-164-KVM-guest_memfd-Remove-RCU-protected-attribut.patch
 	patches.kernel.org/6.12.59-165-KVM-guest_memfd-Remove-bindings-on-memslot-de.patch
 	patches.kernel.org/6.12.59-166-net-netpoll-Individualize-the-skb-pool.patch
+	patches.kernel.org/6.12.59-167-net-netpoll-flush-skb-pool-during-cleanup.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
