KVM: guest_memfd: Remove RCU-protected attribute from slot->gmem.file (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12282,6 +12282,7 @@
 	patches.kernel.org/6.12.59-161-wifi-mac80211-use-wiphy_hrtimer_work-for-csa..patch
 	patches.kernel.org/6.12.59-162-mm-percpu-do-not-consider-sleepable-allocatio.patch
 	patches.kernel.org/6.12.59-163-KVM-guest_memfd-Pass-index-not-gfn-to-__kvm_g.patch
+	patches.kernel.org/6.12.59-164-KVM-guest_memfd-Remove-RCU-protected-attribut.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
