net/handshake: Fix memory leak in tls_handshake_accept() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12164,6 +12164,7 @@
 	patches.kernel.org/6.12.59-043-Bluetooth-6lowpan-Don-t-hold-spin-lock-over-s.patch
 	patches.kernel.org/6.12.59-044-sctp-prevent-possible-shift-out-of-bounds-in-.patch
 	patches.kernel.org/6.12.59-045-net-smc-fix-mismatch-between-CLC-header-and-p.patch
+	patches.kernel.org/6.12.59-046-net-handshake-Fix-memory-leak-in-tls_handshak.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
