erofs: avoid infinite loop due to incomplete zstd-compressed data (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12149,6 +12149,7 @@
 	patches.kernel.org/6.12.59-028-HID-logitech-hidpp-Add-HIDPP_QUIRK_RESET_HI_R.patch
 	patches.kernel.org/6.12.59-029-ASoC-max98090-91-fixed-max98091-ALSA-widget-p.patch
 	patches.kernel.org/6.12.59-030-wifi-ath11k-zero-init-info-status-in-wmi_proc.patch
+	patches.kernel.org/6.12.59-031-erofs-avoid-infinite-loop-due-to-incomplete-z.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
