--- a/series.conf
+++ b/series.conf
@@ -12127,6 +12127,7 @@
 	patches.kernel.org/6.12.59-006-drm-amd-Fix-suspend-failure-with-secure-displ.patch
 	patches.kernel.org/6.12.59-007-drm-xe-guc-Synchronize-Dead-CT-worker-with-un.patch
 	patches.kernel.org/6.12.59-008-drm-xe-Move-declarations-under-conditional-br.patch
+	patches.kernel.org/6.12.59-009-drm-xe-Do-clean-shutdown-also-when-using-flr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
