--- a/series.conf
+++ b/series.conf
@@ -12268,6 +12268,7 @@
 	patches.kernel.org/6.12.59-147-btrfs-release-root-after-error-in-data_reloc_.patch
 	patches.kernel.org/6.12.59-148-drm-amdkfd-relax-checks-for-over-allocation-o.patch
 	patches.kernel.org/6.12.59-149-drm-amdgpu-disable-peer-to-peer-access-for-DC.patch
+	patches.kernel.org/6.12.59-150-pmdomain-arm-scmi-Fix-genpd-leak-on-provider-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
