--- a/series.conf
+++ b/series.conf
@@ -12122,6 +12122,7 @@
 	patches.kernel.org/6.12.59-001-drm-mediatek-Add-pm_runtime-support-for-GCE-p.patch
 	patches.kernel.org/6.12.59-002-drm-i915-Avoid-lock-inversion-when-pinning-to.patch
 	patches.kernel.org/6.12.59-003-drm-i915-Fix-conversion-between-clock-ticks-a.patch
+	patches.kernel.org/6.12.59-004-smb-client-fix-refcount-leak-in-smb2_set_path.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
