--- a/series.conf
+++ b/series.conf
@@ -12215,6 +12215,7 @@
 	patches.kernel.org/6.12.59-094-virtio-fs-fix-incorrect-check-for-fsvq-kobj.patch
 	patches.kernel.org/6.12.59-095-fs-namespace-correctly-handle-errors-returned.patch
 	patches.kernel.org/6.12.59-096-sched_ext-Fix-unsafe-locking-in-the-scx_dump_.patch
+	patches.kernel.org/6.12.59-097-Revert-netfilter-nf_tables-Reintroduce-shorte.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
