--- a/series.conf
+++ b/series.conf
@@ -12188,6 +12188,7 @@
 	patches.kernel.org/6.12.59-067-acpi-srat-Fix-incorrect-device-handle-check-f.patch
 	patches.kernel.org/6.12.59-068-regulator-fixed-fix-GPIO-descriptor-leak-on-r.patch
 	patches.kernel.org/6.12.59-069-ASoC-cs4271-Fix-regulator-leak-on-probe-failu.patch
+	patches.kernel.org/6.12.59-070-ASoC-codecs-va-macro-fix-resource-leak-in-pro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
