drm/amdgpu: hide VRAM sysfs attributes on GPUs without VRAM (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12135,6 +12135,7 @@
 	patches.kernel.org/6.12.59-014-riscv-acpi-avoid-errors-caused-by-probing-DT-.patch
 	patches.kernel.org/6.12.59-015-drm-amdgpu-remove-two-invalid-BUG_ON-s.patch
 	patches.kernel.org/6.12.59-016-drm-amd-pm-Disable-MCLK-switching-on-SI-at-hi.patch
+	patches.kernel.org/6.12.59-017-drm-amdgpu-hide-VRAM-sysfs-attributes-on-GPUs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
