fs/namespace: correctly handle errors returned by grab_requested_mnt_ns (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12213,6 +12213,7 @@
 	patches.kernel.org/6.12.59-092-hostfs-Fix-only-passing-host-root-in-boot-sta.patch
 	patches.kernel.org/6.12.59-093-mtd-onenand-Pass-correct-pointer-to-IRQ-handl.patch
 	patches.kernel.org/6.12.59-094-virtio-fs-fix-incorrect-check-for-fsvq-kobj.patch
+	patches.kernel.org/6.12.59-095-fs-namespace-correctly-handle-errors-returned.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
