--- a/series.conf
+++ b/series.conf
@@ -12302,6 +12302,7 @@
 	patches.kernel.org/6.12.59-181-isdn-mISDN-hfcsusb-fix-memory-leak-in-hfcsusb.patch
 	patches.kernel.org/6.12.59-182-net-phy-micrel-Fix-lan8814_config_init.patch
 	patches.kernel.org/6.12.59-183-net-netpoll-ensure-skb_pool-list-is-always-in.patch
+	patches.kernel.org/6.12.59-184-proc-proc_maps_open-allow-proc_mem_open-to-re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
