--- a/series.conf
+++ b/series.conf
@@ -12134,6 +12134,7 @@
 	patches.kernel.org/6.12.59-013-RISC-V-clear-hot-unplugged-cores-from-all-tas.patch
 	patches.kernel.org/6.12.59-014-riscv-acpi-avoid-errors-caused-by-probing-DT-.patch
 	patches.kernel.org/6.12.59-015-drm-amdgpu-remove-two-invalid-BUG_ON-s.patch
+	patches.kernel.org/6.12.59-016-drm-amd-pm-Disable-MCLK-switching-on-SI-at-hi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
