--- a/series.conf
+++ b/series.conf
@@ -12299,6 +12299,7 @@
 	patches.kernel.org/6.12.59-178-mm-secretmem-fix-use-after-free-race-in-fault.patch
 	patches.kernel.org/6.12.59-179-mm-huge_memory-do-not-change-split_huge_page-.patch
 	patches.kernel.org/6.12.59-180-mm-huge_memory-preserve-PG_has_hwpoisoned-if-.patch
+	patches.kernel.org/6.12.59-181-isdn-mISDN-hfcsusb-fix-memory-leak-in-hfcsusb.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
