--- a/series.conf
+++ b/series.conf
@@ -12263,6 +12263,7 @@
 	patches.kernel.org/6.12.59-142-PM-hibernate-Emit-an-error-when-image-writing.patch
 	patches.kernel.org/6.12.59-143-PM-hibernate-Use-atomic64_t-for-compressed_si.patch
 	patches.kernel.org/6.12.59-144-btrfs-zoned-fix-conventional-zone-capacity-ca.patch
+	patches.kernel.org/6.12.59-145-btrfs-scrub-put-bio-after-errors-in-scrub_rai.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
