--- a/series.conf
+++ b/series.conf
@@ -12150,6 +12150,7 @@
 	patches.kernel.org/6.12.59-029-ASoC-max98090-91-fixed-max98091-ALSA-widget-p.patch
 	patches.kernel.org/6.12.59-030-wifi-ath11k-zero-init-info-status-in-wmi_proc.patch
 	patches.kernel.org/6.12.59-031-erofs-avoid-infinite-loop-due-to-incomplete-z.patch
+	patches.kernel.org/6.12.59-032-selftests-net-local_termination-Wait-for-inte.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
