btrfs: do not update last_log_commit when logging inode due to a new name (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12264,6 +12264,7 @@
 	patches.kernel.org/6.12.59-143-PM-hibernate-Use-atomic64_t-for-compressed_si.patch
 	patches.kernel.org/6.12.59-144-btrfs-zoned-fix-conventional-zone-capacity-ca.patch
 	patches.kernel.org/6.12.59-145-btrfs-scrub-put-bio-after-errors-in-scrub_rai.patch
+	patches.kernel.org/6.12.59-146-btrfs-do-not-update-last_log_commit-when-logg.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
