ksmbd: close accepted socket when per-IP limit rejects connection (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12232,6 +12232,7 @@
 	patches.kernel.org/6.12.59-111-nfsd-add-missing-FATTR4_WORD2_CLONE_BLKSIZE-f.patch
 	patches.kernel.org/6.12.59-112-NFSD-free-copynotify-stateid-in-nfs4_free_ol_.patch
 	patches.kernel.org/6.12.59-113-gcov-add-support-for-GCC-15.patch
+	patches.kernel.org/6.12.59-114-ksmbd-close-accepted-socket-when-per-IP-limit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
