net: ethernet: ti: am65-cpsw-qos: fix IET verify retry mechanism (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12166,6 +12166,7 @@
 	patches.kernel.org/6.12.59-045-net-smc-fix-mismatch-between-CLC-header-and-p.patch
 	patches.kernel.org/6.12.59-046-net-handshake-Fix-memory-leak-in-tls_handshak.patch
 	patches.kernel.org/6.12.59-047-net-ethernet-ti-am65-cpsw-qos-fix-IET-verify-.patch
+	patches.kernel.org/6.12.59-048-net-ethernet-ti-am65-cpsw-qos-fix-IET-verify-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
