--- a/series.conf
+++ b/series.conf
@@ -12233,6 +12233,7 @@
 	patches.kernel.org/6.12.59-112-NFSD-free-copynotify-stateid-in-nfs4_free_ol_.patch
 	patches.kernel.org/6.12.59-113-gcov-add-support-for-GCC-15.patch
 	patches.kernel.org/6.12.59-114-ksmbd-close-accepted-socket-when-per-IP-limit.patch
+	patches.kernel.org/6.12.59-115-ksm-use-range-walk-function-to-jump-over-hole.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
