NFSv2/v3: Fix error handling in nfs_atomic_open_v23() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12194,6 +12194,7 @@
 	patches.kernel.org/6.12.59-073-pnfs-Fix-TLS-logic-in-_nfs4_pnfs_v4_ds_connec.patch
 	patches.kernel.org/6.12.59-074-pnfs-Set-transport-security-policy-to-RPC_XPR.patch
 	patches.kernel.org/6.12.59-075-simplify-nfs_atomic_open_v23.patch
+	patches.kernel.org/6.12.59-076-NFSv2-v3-Fix-error-handling-in-nfs_atomic_ope.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
