--- a/series.conf
+++ b/series.conf
@@ -12248,6 +12248,7 @@
 	patches.kernel.org/6.12.59-127-mmc-sdhci-of-dwcmshc-Change-DLL_STRBIN_TAPNUM.patch
 	patches.kernel.org/6.12.59-128-mmc-dw_mmc-rockchip-Fix-wrong-internal-phase-.patch
 	patches.kernel.org/6.12.59-129-ALSA-usb-audio-Fix-potential-overflow-of-PCM-.patch
+	patches.kernel.org/6.12.59-130-cifs-client-fix-memory-leak-in-smb3_fs_contex.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
