fs/proc: fix uaf in proc_readdir_de() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12242,6 +12242,7 @@
 	patches.kernel.org/6.12.59-121-nilfs2-avoid-having-an-active-sc_timer-before.patch
 	patches.kernel.org/6.12.59-122-selftests-tracing-Run-sample-events-to-clear-.patch
 	patches.kernel.org/6.12.59-123-wifi-mac80211-reject-address-change-while-con.patch
+	patches.kernel.org/6.12.59-124-fs-proc-fix-uaf-in-proc_readdir_de.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
