NFSD: free copynotify stateid in nfs4_free_ol_stateid() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12230,6 +12230,7 @@
 	patches.kernel.org/6.12.59-109-KVM-SVM-Mark-VMCB_LBR-dirty-when-MSR_IA32_DEB.patch
 	patches.kernel.org/6.12.59-110-nfsd-fix-refcount-leak-in-nfsd_set_fh_dentry.patch
 	patches.kernel.org/6.12.59-111-nfsd-add-missing-FATTR4_WORD2_CLONE_BLKSIZE-f.patch
+	patches.kernel.org/6.12.59-112-NFSD-free-copynotify-stateid-in-nfs4_free_ol_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
