--- a/series.conf
+++ b/series.conf
@@ -12240,6 +12240,7 @@
 	patches.kernel.org/6.12.59-119-LoongArch-Let-pte-pmd-_modify-record-the-stat.patch
 	patches.kernel.org/6.12.59-120-ipv4-route-Prevent-rt_bind_exception-from-reb.patch
 	patches.kernel.org/6.12.59-121-nilfs2-avoid-having-an-active-sc_timer-before.patch
+	patches.kernel.org/6.12.59-122-selftests-tracing-Run-sample-events-to-clear-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
