--- a/series.conf
+++ b/series.conf
@@ -12157,6 +12157,7 @@
 	patches.kernel.org/6.12.59-036-net-phy-micrel-lan8814-fix-reset-of-the-QSGMI.patch
 	patches.kernel.org/6.12.59-037-rust-Add-fno-isolate-erroneous-paths-derefere.patch
 	patches.kernel.org/6.12.59-038-NFSD-Skip-close-replay-processing-if-XDR-enco.patch
+	patches.kernel.org/6.12.59-039-Bluetooth-MGMT-cancel-mesh-send-timer-when-hd.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
