--- a/series.conf
+++ b/series.conf
@@ -12256,6 +12256,7 @@
 	patches.kernel.org/6.12.59-135-spi-Try-to-get-ACPI-GPIO-IRQ-earlier.patch
 	patches.kernel.org/6.12.59-136-x86-microcode-AMD-Add-Zen5-model-0x44-steppin.patch
 	patches.kernel.org/6.12.59-137-selftests-user_events-fix-type-cast-for-write.patch
+	patches.kernel.org/6.12.59-138-ftrace-Fix-BPF-fexit-with-livepatch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
