mtd: onenand: Pass correct pointer to IRQ handler (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12211,6 +12211,7 @@
 	patches.kernel.org/6.12.59-090-Bluetooth-MGMT-Fix-possible-UAFs.patch
 	patches.kernel.org/6.12.59-091-f2fs-fix-to-avoid-overflow-while-left-shift-o.patch
 	patches.kernel.org/6.12.59-092-hostfs-Fix-only-passing-host-root-in-boot-sta.patch
+	patches.kernel.org/6.12.59-093-mtd-onenand-Pass-correct-pointer-to-IRQ-handl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
