--- a/series.conf
+++ b/series.conf
@@ -12297,6 +12297,7 @@
 	patches.kernel.org/6.12.59-176-mm-memory-do-not-populate-page-table-entries-.patch
 	patches.kernel.org/6.12.59-177-mm-truncate-unmap-large-folio-on-split-failur.patch
 	patches.kernel.org/6.12.59-178-mm-secretmem-fix-use-after-free-race-in-fault.patch
+	patches.kernel.org/6.12.59-179-mm-huge_memory-do-not-change-split_huge_page-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
