crash: fix crashkernel resource shrink (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12250,6 +12250,7 @@
 	patches.kernel.org/6.12.59-129-ALSA-usb-audio-Fix-potential-overflow-of-PCM-.patch
 	patches.kernel.org/6.12.59-130-cifs-client-fix-memory-leak-in-smb3_fs_contex.patch
 	patches.kernel.org/6.12.59-131-codetag-debug-handle-existing-CODETAG_EMPTY-i.patch
+	patches.kernel.org/6.12.59-132-crash-fix-crashkernel-resource-shrink.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
