lib/crypto: arm/curve25519: Disable on CPU_BIG_ENDIAN (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12206,6 +12206,7 @@
 	patches.kernel.org/6.12.59-085-wifi-ath11k-Clear-affinity-hint-before-callin.patch
 	patches.kernel.org/6.12.59-086-proc-fix-the-issue-of-proc_mem_open-returning.patch
 	patches.kernel.org/6.12.59-087-ext4-introduce-ITAIL-helper.patch
+	patches.kernel.org/6.12.59-088-lib-crypto-arm-curve25519-Disable-on-CPU_BIG_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
