arm64: dts: rockchip: Make RK3588 GPU OPP table naming less generic (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12218,6 +12218,7 @@
 	patches.kernel.org/6.12.59-097-Revert-netfilter-nf_tables-Reintroduce-shorte.patch
 	patches.kernel.org/6.12.59-098-netfilter-nf_tables-reject-duplicate-device-o.patch
 	patches.kernel.org/6.12.59-099-arm64-dts-rockchip-Set-correct-pinctrl-for-I2.patch
+	patches.kernel.org/6.12.59-100-arm64-dts-rockchip-Make-RK3588-GPU-OPP-table-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
