LoongArch: KVM: Restore guest PMU if it is enabled (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12225,6 +12225,7 @@
 	patches.kernel.org/6.12.59-104-HID-playstation-Fix-memory-leak-in-dualshock4.patch
 	patches.kernel.org/6.12.59-105-HID-uclogic-Fix-potential-memory-leak-in-erro.patch
 	patches.kernel.org/6.12.59-106-net-dsa-sja1105-fix-kasan-out-of-bounds-warni.patch
+	patches.kernel.org/6.12.59-107-LoongArch-KVM-Restore-guest-PMU-if-it-is-enab.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
