--- a/series.conf
+++ b/series.conf
@@ -12172,6 +12172,7 @@
 	patches.kernel.org/6.12.59-051-wifi-mac80211-skip-rate-verification-for-not-.patch
 	patches.kernel.org/6.12.59-052-af_unix-Initialise-scc_index-in-unix_add_edge.patch
 	patches.kernel.org/6.12.59-053-net_sched-act_connmark-use-RCU-in-tcf_connmar.patch
+	patches.kernel.org/6.12.59-054-net-sched-act_connmark-initialize-struct-tc_i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
