--- a/series.conf
+++ b/series.conf
@@ -12226,6 +12226,7 @@
 	patches.kernel.org/6.12.59-105-HID-uclogic-Fix-potential-memory-leak-in-erro.patch
 	patches.kernel.org/6.12.59-106-net-dsa-sja1105-fix-kasan-out-of-bounds-warni.patch
 	patches.kernel.org/6.12.59-107-LoongArch-KVM-Restore-guest-PMU-if-it-is-enab.patch
+	patches.kernel.org/6.12.59-108-LoongArch-KVM-Add-delay-until-timer-interrupt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
