--- a/series.conf
+++ b/series.conf
@@ -12205,6 +12205,7 @@
 	patches.kernel.org/6.12.59-084-irqchip-riscv-intc-Add-missing-free-callback-.patch
 	patches.kernel.org/6.12.59-085-wifi-ath11k-Clear-affinity-hint-before-callin.patch
 	patches.kernel.org/6.12.59-086-proc-fix-the-issue-of-proc_mem_open-returning.patch
+	patches.kernel.org/6.12.59-087-ext4-introduce-ITAIL-helper.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
