--- a/series.conf
+++ b/series.conf
@@ -12265,6 +12265,7 @@
 	patches.kernel.org/6.12.59-144-btrfs-zoned-fix-conventional-zone-capacity-ca.patch
 	patches.kernel.org/6.12.59-145-btrfs-scrub-put-bio-after-errors-in-scrub_rai.patch
 	patches.kernel.org/6.12.59-146-btrfs-do-not-update-last_log_commit-when-logg.patch
+	patches.kernel.org/6.12.59-147-btrfs-release-root-after-error-in-data_reloc_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
