smb/server: fix possible refcount leak in smb2_sess_setup() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12145,6 +12145,7 @@
 	patches.kernel.org/6.12.59-024-HID-quirks-Add-ALWAYS_POLL-quirk-for-VRS-R295.patch
 	patches.kernel.org/6.12.59-025-exfat-fix-improper-check-of-dentry.stream.val.patch
 	patches.kernel.org/6.12.59-026-smb-server-fix-possible-memory-leak-in-smb2_r.patch
+	patches.kernel.org/6.12.59-027-smb-server-fix-possible-refcount-leak-in-smb2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
