--- a/series.conf
+++ b/series.conf
@@ -12151,6 +12151,7 @@
 	patches.kernel.org/6.12.59-030-wifi-ath11k-zero-init-info-status-in-wmi_proc.patch
 	patches.kernel.org/6.12.59-031-erofs-avoid-infinite-loop-due-to-incomplete-z.patch
 	patches.kernel.org/6.12.59-032-selftests-net-local_termination-Wait-for-inte.patch
+	patches.kernel.org/6.12.59-033-net-fec-correct-rx_bytes-statistic-for-the-ca.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
