--- a/series.conf
+++ b/series.conf
@@ -12136,6 +12136,7 @@
 	patches.kernel.org/6.12.59-015-drm-amdgpu-remove-two-invalid-BUG_ON-s.patch
 	patches.kernel.org/6.12.59-016-drm-amd-pm-Disable-MCLK-switching-on-SI-at-hi.patch
 	patches.kernel.org/6.12.59-017-drm-amdgpu-hide-VRAM-sysfs-attributes-on-GPUs.patch
+	patches.kernel.org/6.12.59-018-drm-amdgpu-Fix-NULL-pointer-dereference-in-VR.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
