net/smc: fix mismatch between CLC header and proposal (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12163,6 +12163,7 @@
 	patches.kernel.org/6.12.59-042-Bluetooth-6lowpan-fix-BDADDR_LE-vs-ADDR_LE_DE.patch
 	patches.kernel.org/6.12.59-043-Bluetooth-6lowpan-Don-t-hold-spin-lock-over-s.patch
 	patches.kernel.org/6.12.59-044-sctp-prevent-possible-shift-out-of-bounds-in-.patch
+	patches.kernel.org/6.12.59-045-net-smc-fix-mismatch-between-CLC-header-and-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
