gcov: add support for GCC 15 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12231,6 +12231,7 @@
 	patches.kernel.org/6.12.59-110-nfsd-fix-refcount-leak-in-nfsd_set_fh_dentry.patch
 	patches.kernel.org/6.12.59-111-nfsd-add-missing-FATTR4_WORD2_CLONE_BLKSIZE-f.patch
 	patches.kernel.org/6.12.59-112-NFSD-free-copynotify-stateid-in-nfs4_free_ol_.patch
+	patches.kernel.org/6.12.59-113-gcov-add-support-for-GCC-15.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
