HID: hid-ntrig: Prevent memory leak in ntrig_report_version() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12220,6 +12220,7 @@
 	patches.kernel.org/6.12.59-099-arm64-dts-rockchip-Set-correct-pinctrl-for-I2.patch
 	patches.kernel.org/6.12.59-100-arm64-dts-rockchip-Make-RK3588-GPU-OPP-table-.patch
 	patches.kernel.org/6.12.59-101-ARM-dts-imx51-zii-rdu1-Fix-audmux-node-names.patch
+	patches.kernel.org/6.12.59-102-HID-hid-ntrig-Prevent-memory-leak-in-ntrig_re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
