net_sched: act_connmark: use RCU in tcf_connmark_dump() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12171,6 +12171,7 @@
 	patches.kernel.org/6.12.59-050-net-mdio-fix-resource-leak-in-mdiobus_registe.patch
 	patches.kernel.org/6.12.59-051-wifi-mac80211-skip-rate-verification-for-not-.patch
 	patches.kernel.org/6.12.59-052-af_unix-Initialise-scc_index-in-unix_add_edge.patch
+	patches.kernel.org/6.12.59-053-net_sched-act_connmark-use-RCU-in-tcf_connmar.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
