--- a/series.conf
+++ b/series.conf
@@ -12155,6 +12155,7 @@
 	patches.kernel.org/6.12.59-034-net-phy-micrel-Introduce-lanphy_modify_page_r.patch
 	patches.kernel.org/6.12.59-035-net-phy-micrel-Replace-hardcoded-pages-with-d.patch
 	patches.kernel.org/6.12.59-036-net-phy-micrel-lan8814-fix-reset-of-the-QSGMI.patch
+	patches.kernel.org/6.12.59-037-rust-Add-fno-isolate-erroneous-paths-derefere.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
