spi: Try to get ACPI GPIO IRQ earlier (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12253,6 +12253,7 @@
 	patches.kernel.org/6.12.59-132-crash-fix-crashkernel-resource-shrink.patch
 	patches.kernel.org/6.12.59-133-crypto-hisilicon-qm-Fix-device-reference-leak.patch
 	patches.kernel.org/6.12.59-134-smb-client-fix-cifs_pick_channel-when-channel.patch
+	patches.kernel.org/6.12.59-135-spi-Try-to-get-ACPI-GPIO-IRQ-earlier.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
