HID: quirks: Add ALWAYS_POLL quirk for VRS R295 steering wheel (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12142,6 +12142,7 @@
 	patches.kernel.org/6.12.59-021-HID-quirks-avoid-Cooler-Master-MM712-dongle-w.patch
 	patches.kernel.org/6.12.59-022-HID-nintendo-Wait-longer-for-initial-probe.patch
 	patches.kernel.org/6.12.59-023-NFS-check-if-suid-sgid-was-cleared-after-a-wr.patch
+	patches.kernel.org/6.12.59-024-HID-quirks-Add-ALWAYS_POLL-quirk-for-VRS-R295.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
