ASoC: max98090/91: fixed max98091 ALSA widget powering up/down (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12147,6 +12147,7 @@
 	patches.kernel.org/6.12.59-026-smb-server-fix-possible-memory-leak-in-smb2_r.patch
 	patches.kernel.org/6.12.59-027-smb-server-fix-possible-refcount-leak-in-smb2.patch
 	patches.kernel.org/6.12.59-028-HID-logitech-hidpp-Add-HIDPP_QUIRK_RESET_HI_R.patch
+	patches.kernel.org/6.12.59-029-ASoC-max98090-91-fixed-max98091-ALSA-widget-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
