wifi: cfg80211: add an hrtimer based delayed work item (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12278,6 +12278,7 @@
 	patches.kernel.org/6.12.59-157-selftests-mptcp-join-userspace-longer-transfe.patch
 	patches.kernel.org/6.12.59-158-selftests-mptcp-join-properly-kill-background.patch
 	patches.kernel.org/6.12.59-159-mptcp-fix-MSG_PEEK-stream-corruption.patch
+	patches.kernel.org/6.12.59-160-wifi-cfg80211-add-an-hrtimer-based-delayed-wo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
