--- a/series.conf
+++ b/series.conf
@@ -12143,6 +12143,7 @@
 	patches.kernel.org/6.12.59-022-HID-nintendo-Wait-longer-for-initial-probe.patch
 	patches.kernel.org/6.12.59-023-NFS-check-if-suid-sgid-was-cleared-after-a-wr.patch
 	patches.kernel.org/6.12.59-024-HID-quirks-Add-ALWAYS_POLL-quirk-for-VRS-R295.patch
+	patches.kernel.org/6.12.59-025-exfat-fix-improper-check-of-dentry.stream.val.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
