ACPI: CPPC: Check _CPC validity for only the online CPUs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12181,6 +12181,7 @@
 	patches.kernel.org/6.12.59-060-virtio-net-fix-incorrect-flags-recording-in-b.patch
 	patches.kernel.org/6.12.59-061-hsr-Fix-supervision-frame-sending-on-HSRv0.patch
 	patches.kernel.org/6.12.59-062-ACPI-CPPC-Detect-preferred-core-availability-.patch
+	patches.kernel.org/6.12.59-063-ACPI-CPPC-Check-_CPC-validity-for-only-the-on.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
