--- a/series.conf
+++ b/series.conf
@@ -12193,6 +12193,7 @@
 	patches.kernel.org/6.12.59-072-ASoC-tas2781-fix-getting-the-wrong-device-num.patch
 	patches.kernel.org/6.12.59-073-pnfs-Fix-TLS-logic-in-_nfs4_pnfs_v4_ds_connec.patch
 	patches.kernel.org/6.12.59-074-pnfs-Set-transport-security-policy-to-RPC_XPR.patch
+	patches.kernel.org/6.12.59-075-simplify-nfs_atomic_open_v23.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
