--- a/series.conf
+++ b/series.conf
@@ -12179,6 +12179,7 @@
 	patches.kernel.org/6.12.59-058-net-mlx5e-Fix-potentially-misleading-debug-me.patch
 	patches.kernel.org/6.12.59-059-net_sched-limit-try_bulk_dequeue_skb-batches.patch
 	patches.kernel.org/6.12.59-060-virtio-net-fix-incorrect-flags-recording-in-b.patch
+	patches.kernel.org/6.12.59-061-hsr-Fix-supervision-frame-sending-on-HSRv0.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
