mm/truncate: unmap large folio on split failure (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12295,6 +12295,7 @@
 	patches.kernel.org/6.12.59-174-rust-kbuild-workaround-rustdoc-doctests-modif.patch
 	patches.kernel.org/6.12.59-175-uio_hv_generic-Set-event-for-all-channels-on-.patch
 	patches.kernel.org/6.12.59-176-mm-memory-do-not-populate-page-table-entries-.patch
+	patches.kernel.org/6.12.59-177-mm-truncate-unmap-large-folio-on-split-failur.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
