--- a/series.conf
+++ b/series.conf
@@ -12273,6 +12273,7 @@
 	patches.kernel.org/6.12.59-152-pmdomain-samsung-plug-potential-memleak-durin.patch
 	patches.kernel.org/6.12.59-153-selftests-mptcp-connect-fix-fallback-note-due.patch
 	patches.kernel.org/6.12.59-154-selftests-mptcp-join-rm-set-backup-flag.patch
+	patches.kernel.org/6.12.59-155-selftests-mptcp-join-endpoints-longer-transfe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
