selftests: mptcp: join: userspace: longer transfer (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12275,6 +12275,7 @@
 	patches.kernel.org/6.12.59-154-selftests-mptcp-join-rm-set-backup-flag.patch
 	patches.kernel.org/6.12.59-155-selftests-mptcp-join-endpoints-longer-transfe.patch
 	patches.kernel.org/6.12.59-156-selftests-mptcp-connect-trunc-read-all-recv-d.patch
+	patches.kernel.org/6.12.59-157-selftests-mptcp-join-userspace-longer-transfe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
