mm, percpu: do not consider sleepable allocations atomic (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12280,6 +12280,7 @@
 	patches.kernel.org/6.12.59-159-mptcp-fix-MSG_PEEK-stream-corruption.patch
 	patches.kernel.org/6.12.59-160-wifi-cfg80211-add-an-hrtimer-based-delayed-wo.patch
 	patches.kernel.org/6.12.59-161-wifi-mac80211-use-wiphy_hrtimer_work-for-csa..patch
+	patches.kernel.org/6.12.59-162-mm-percpu-do-not-consider-sleepable-allocatio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
