--- a/series.conf
+++ b/series.conf
@@ -12251,6 +12251,7 @@
 	patches.kernel.org/6.12.59-130-cifs-client-fix-memory-leak-in-smb3_fs_contex.patch
 	patches.kernel.org/6.12.59-131-codetag-debug-handle-existing-CODETAG_EMPTY-i.patch
 	patches.kernel.org/6.12.59-132-crash-fix-crashkernel-resource-shrink.patch
+	patches.kernel.org/6.12.59-133-crypto-hisilicon-qm-Fix-device-reference-leak.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
