nilfs2: avoid having an active sc_timer before freeing sci (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12239,6 +12239,7 @@
 	patches.kernel.org/6.12.59-118-LoongArch-Use-correct-accessor-to-read-FWPC-M.patch
 	patches.kernel.org/6.12.59-119-LoongArch-Let-pte-pmd-_modify-record-the-stat.patch
 	patches.kernel.org/6.12.59-120-ipv4-route-Prevent-rt_bind_exception-from-reb.patch
+	patches.kernel.org/6.12.59-121-nilfs2-avoid-having-an-active-sc_timer-before.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
