--- a/series.conf
+++ b/series.conf
@@ -12274,6 +12274,7 @@
 	patches.kernel.org/6.12.59-153-selftests-mptcp-connect-fix-fallback-note-due.patch
 	patches.kernel.org/6.12.59-154-selftests-mptcp-join-rm-set-backup-flag.patch
 	patches.kernel.org/6.12.59-155-selftests-mptcp-join-endpoints-longer-transfe.patch
+	patches.kernel.org/6.12.59-156-selftests-mptcp-connect-trunc-read-all-recv-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
