--- a/series.conf
+++ b/series.conf
@@ -12293,6 +12293,7 @@
 	patches.kernel.org/6.12.59-172-io_uring-napi-fix-io_napi_entry-RCU-accesses.patch
 	patches.kernel.org/6.12.59-173-rust-kbuild-treat-build_error-and-rustdoc-as-.patch
 	patches.kernel.org/6.12.59-174-rust-kbuild-workaround-rustdoc-doctests-modif.patch
+	patches.kernel.org/6.12.59-175-uio_hv_generic-Set-event-for-all-channels-on-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
