--- a/series.conf
+++ b/series.conf
@@ -12162,6 +12162,7 @@
 	patches.kernel.org/6.12.59-041-Bluetooth-6lowpan-reset-link-local-header-on-.patch
 	patches.kernel.org/6.12.59-042-Bluetooth-6lowpan-fix-BDADDR_LE-vs-ADDR_LE_DE.patch
 	patches.kernel.org/6.12.59-043-Bluetooth-6lowpan-Don-t-hold-spin-lock-over-s.patch
+	patches.kernel.org/6.12.59-044-sctp-prevent-possible-shift-out-of-bounds-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
