--- a/series.conf
+++ b/series.conf
@@ -12262,6 +12262,7 @@
 	patches.kernel.org/6.12.59-141-EDAC-altera-Use-INTTEST-register-for-Ethernet.patch
 	patches.kernel.org/6.12.59-142-PM-hibernate-Emit-an-error-when-image-writing.patch
 	patches.kernel.org/6.12.59-143-PM-hibernate-Use-atomic64_t-for-compressed_si.patch
+	patches.kernel.org/6.12.59-144-btrfs-zoned-fix-conventional-zone-capacity-ca.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
