--- a/series.conf
+++ b/series.conf
@@ -12228,6 +12228,7 @@
 	patches.kernel.org/6.12.59-107-LoongArch-KVM-Restore-guest-PMU-if-it-is-enab.patch
 	patches.kernel.org/6.12.59-108-LoongArch-KVM-Add-delay-until-timer-interrupt.patch
 	patches.kernel.org/6.12.59-109-KVM-SVM-Mark-VMCB_LBR-dirty-when-MSR_IA32_DEB.patch
+	patches.kernel.org/6.12.59-110-nfsd-fix-refcount-leak-in-nfsd_set_fh_dentry.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
