LoongArch: Let {pte,pmd}_modify() record the status of _PAGE_DIRTY (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12237,6 +12237,7 @@
 	patches.kernel.org/6.12.59-116-strparser-Fix-signed-unsigned-mismatch-bug.patch
 	patches.kernel.org/6.12.59-117-dma-mapping-benchmark-Restore-padding-to-ensu.patch
 	patches.kernel.org/6.12.59-118-LoongArch-Use-correct-accessor-to-read-FWPC-M.patch
+	patches.kernel.org/6.12.59-119-LoongArch-Let-pte-pmd-_modify-record-the-stat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
