--- a/series.conf
+++ b/series.conf
@@ -12259,6 +12259,7 @@
 	patches.kernel.org/6.12.59-138-ftrace-Fix-BPF-fexit-with-livepatch.patch
 	patches.kernel.org/6.12.59-139-LoongArch-Use-physical-addresses-for-CSR_MERR.patch
 	patches.kernel.org/6.12.59-140-EDAC-altera-Handle-OCRAM-ECC-enable-after-war.patch
+	patches.kernel.org/6.12.59-141-EDAC-altera-Use-INTTEST-register-for-Ethernet.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
