--- a/series.conf
+++ b/series.conf
@@ -12279,6 +12279,7 @@
 	patches.kernel.org/6.12.59-158-selftests-mptcp-join-properly-kill-background.patch
 	patches.kernel.org/6.12.59-159-mptcp-fix-MSG_PEEK-stream-corruption.patch
 	patches.kernel.org/6.12.59-160-wifi-cfg80211-add-an-hrtimer-based-delayed-wo.patch
+	patches.kernel.org/6.12.59-161-wifi-mac80211-use-wiphy_hrtimer_work-for-csa..patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
