--- a/series.conf
+++ b/series.conf
@@ -12159,6 +12159,7 @@
 	patches.kernel.org/6.12.59-038-NFSD-Skip-close-replay-processing-if-XDR-enco.patch
 	patches.kernel.org/6.12.59-039-Bluetooth-MGMT-cancel-mesh-send-timer-when-hd.patch
 	patches.kernel.org/6.12.59-040-Bluetooth-btusb-reorder-cleanup-in-btusb_disc.patch
+	patches.kernel.org/6.12.59-041-Bluetooth-6lowpan-reset-link-local-header-on-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
