drm/xe/guc: Synchronize Dead CT worker with unbind (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12125,6 +12125,7 @@
 	patches.kernel.org/6.12.59-004-smb-client-fix-refcount-leak-in-smb2_set_path.patch
 	patches.kernel.org/6.12.59-005-iommufd-Make-vfio_compat-s-unmap-succeed-if-t.patch
 	patches.kernel.org/6.12.59-006-drm-amd-Fix-suspend-failure-with-secure-displ.patch
+	patches.kernel.org/6.12.59-007-drm-xe-guc-Synchronize-Dead-CT-worker-with-un.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
