--- a/series.conf
+++ b/series.conf
@@ -12169,6 +12169,7 @@
 	patches.kernel.org/6.12.59-048-net-ethernet-ti-am65-cpsw-qos-fix-IET-verify-.patch
 	patches.kernel.org/6.12.59-049-tipc-Fix-use-after-free-in-tipc_mon_reinit_se.patch
 	patches.kernel.org/6.12.59-050-net-mdio-fix-resource-leak-in-mdiobus_registe.patch
+	patches.kernel.org/6.12.59-051-wifi-mac80211-skip-rate-verification-for-not-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
