ACPI: CPPC: Limit perf ctrs in PCC check only to online CPUs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12183,6 +12183,7 @@
 	patches.kernel.org/6.12.59-062-ACPI-CPPC-Detect-preferred-core-availability-.patch
 	patches.kernel.org/6.12.59-063-ACPI-CPPC-Check-_CPC-validity-for-only-the-on.patch
 	patches.kernel.org/6.12.59-064-ACPI-CPPC-Perform-fast-check-switch-only-for-.patch
+	patches.kernel.org/6.12.59-065-ACPI-CPPC-Limit-perf-ctrs-in-PCC-check-only-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
