pmdomain: imx: Fix reference count leak in imx_gpc_remove (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12269,6 +12269,7 @@
 	patches.kernel.org/6.12.59-148-drm-amdkfd-relax-checks-for-over-allocation-o.patch
 	patches.kernel.org/6.12.59-149-drm-amdgpu-disable-peer-to-peer-access-for-DC.patch
 	patches.kernel.org/6.12.59-150-pmdomain-arm-scmi-Fix-genpd-leak-on-provider-.patch
+	patches.kernel.org/6.12.59-151-pmdomain-imx-Fix-reference-count-leak-in-imx_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
