net: phy: micrel: Replace hardcoded pages with defines (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12153,6 +12153,7 @@
 	patches.kernel.org/6.12.59-032-selftests-net-local_termination-Wait-for-inte.patch
 	patches.kernel.org/6.12.59-033-net-fec-correct-rx_bytes-statistic-for-the-ca.patch
 	patches.kernel.org/6.12.59-034-net-phy-micrel-Introduce-lanphy_modify_page_r.patch
+	patches.kernel.org/6.12.59-035-net-phy-micrel-Replace-hardcoded-pages-with-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
