--- a/series.conf
+++ b/series.conf
@@ -12180,6 +12180,7 @@
 	patches.kernel.org/6.12.59-059-net_sched-limit-try_bulk_dequeue_skb-batches.patch
 	patches.kernel.org/6.12.59-060-virtio-net-fix-incorrect-flags-recording-in-b.patch
 	patches.kernel.org/6.12.59-061-hsr-Fix-supervision-frame-sending-on-HSRv0.patch
+	patches.kernel.org/6.12.59-062-ACPI-CPPC-Detect-preferred-core-availability-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
