net/mlx5e: Fix wraparound in rate limiting for values above 255 Gbps (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12175,6 +12175,7 @@
 	patches.kernel.org/6.12.59-054-net-sched-act_connmark-initialize-struct-tc_i.patch
 	patches.kernel.org/6.12.59-055-net-sched-act_ife-initialize-struct-tc_ife-to.patch
 	patches.kernel.org/6.12.59-056-net-mlx5e-Fix-maxrate-wraparound-in-threshold.patch
+	patches.kernel.org/6.12.59-057-net-mlx5e-Fix-wraparound-in-rate-limiting-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
