--- a/series.conf
+++ b/series.conf
@@ -12190,6 +12190,7 @@
 	patches.kernel.org/6.12.59-069-ASoC-cs4271-Fix-regulator-leak-on-probe-failu.patch
 	patches.kernel.org/6.12.59-070-ASoC-codecs-va-macro-fix-resource-leak-in-pro.patch
 	patches.kernel.org/6.12.59-071-drm-vmwgfx-Validate-command-header-size-again.patch
+	patches.kernel.org/6.12.59-072-ASoC-tas2781-fix-getting-the-wrong-device-num.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
