--- a/series.conf
+++ b/series.conf
@@ -12221,6 +12221,7 @@
 	patches.kernel.org/6.12.59-100-arm64-dts-rockchip-Make-RK3588-GPU-OPP-table-.patch
 	patches.kernel.org/6.12.59-101-ARM-dts-imx51-zii-rdu1-Fix-audmux-node-names.patch
 	patches.kernel.org/6.12.59-102-HID-hid-ntrig-Prevent-memory-leak-in-ntrig_re.patch
+	patches.kernel.org/6.12.59-103-ARM-dts-BCM53573-Fix-address-of-Luxul-XAP-144.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
