KVM: SVM: Mark VMCB_LBR dirty when MSR_IA32_DEBUGCTLMSR is updated (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12227,6 +12227,7 @@
 	patches.kernel.org/6.12.59-106-net-dsa-sja1105-fix-kasan-out-of-bounds-warni.patch
 	patches.kernel.org/6.12.59-107-LoongArch-KVM-Restore-guest-PMU-if-it-is-enab.patch
 	patches.kernel.org/6.12.59-108-LoongArch-KVM-Add-delay-until-timer-interrupt.patch
+	patches.kernel.org/6.12.59-109-KVM-SVM-Mark-VMCB_LBR-dirty-when-MSR_IA32_DEB.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
