ASoC: cs4271: Fix regulator leak on probe failure (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12187,6 +12187,7 @@
 	patches.kernel.org/6.12.59-066-Bluetooth-L2CAP-export-l2cap_chan_hold-for-mo.patch
 	patches.kernel.org/6.12.59-067-acpi-srat-Fix-incorrect-device-handle-check-f.patch
 	patches.kernel.org/6.12.59-068-regulator-fixed-fix-GPIO-descriptor-leak-on-r.patch
+	patches.kernel.org/6.12.59-069-ASoC-cs4271-Fix-regulator-leak-on-probe-failu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
