--- a/series.conf
+++ b/series.conf
@@ -12246,6 +12246,7 @@
 	patches.kernel.org/6.12.59-125-mm-mm_init-fix-hash-table-order-logging-in-al.patch
 	patches.kernel.org/6.12.59-126-mm-shmem-fix-THP-allocation-and-fallback-loop.patch
 	patches.kernel.org/6.12.59-127-mmc-sdhci-of-dwcmshc-Change-DLL_STRBIN_TAPNUM.patch
+	patches.kernel.org/6.12.59-128-mmc-dw_mmc-rockchip-Fix-wrong-internal-phase-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
