selftests: mptcp: connect: fix fallback note due to OoO (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12271,6 +12271,7 @@
 	patches.kernel.org/6.12.59-150-pmdomain-arm-scmi-Fix-genpd-leak-on-provider-.patch
 	patches.kernel.org/6.12.59-151-pmdomain-imx-Fix-reference-count-leak-in-imx_.patch
 	patches.kernel.org/6.12.59-152-pmdomain-samsung-plug-potential-memleak-durin.patch
+	patches.kernel.org/6.12.59-153-selftests-mptcp-connect-fix-fallback-note-due.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
