net: dsa: sja1105: fix kasan out-of-bounds warning in sja1105_table_delete_entry() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12224,6 +12224,7 @@
 	patches.kernel.org/6.12.59-103-ARM-dts-BCM53573-Fix-address-of-Luxul-XAP-144.patch
 	patches.kernel.org/6.12.59-104-HID-playstation-Fix-memory-leak-in-dualshock4.patch
 	patches.kernel.org/6.12.59-105-HID-uclogic-Fix-potential-memory-leak-in-erro.patch
+	patches.kernel.org/6.12.59-106-net-dsa-sja1105-fix-kasan-out-of-bounds-warni.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
