net: phy: micrel: Fix lan8814_config_init (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12300,6 +12300,7 @@
 	patches.kernel.org/6.12.59-179-mm-huge_memory-do-not-change-split_huge_page-.patch
 	patches.kernel.org/6.12.59-180-mm-huge_memory-preserve-PG_has_hwpoisoned-if-.patch
 	patches.kernel.org/6.12.59-181-isdn-mISDN-hfcsusb-fix-memory-leak-in-hfcsusb.patch
+	patches.kernel.org/6.12.59-182-net-phy-micrel-Fix-lan8814_config_init.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
