--- a/series.conf
+++ b/series.conf
@@ -12254,6 +12254,7 @@
 	patches.kernel.org/6.12.59-133-crypto-hisilicon-qm-Fix-device-reference-leak.patch
 	patches.kernel.org/6.12.59-134-smb-client-fix-cifs_pick_channel-when-channel.patch
 	patches.kernel.org/6.12.59-135-spi-Try-to-get-ACPI-GPIO-IRQ-earlier.patch
+	patches.kernel.org/6.12.59-136-x86-microcode-AMD-Add-Zen5-model-0x44-steppin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
