PM: hibernate: Use atomic64_t for compressed_size variable (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12261,6 +12261,7 @@
 	patches.kernel.org/6.12.59-140-EDAC-altera-Handle-OCRAM-ECC-enable-after-war.patch
 	patches.kernel.org/6.12.59-141-EDAC-altera-Use-INTTEST-register-for-Ethernet.patch
 	patches.kernel.org/6.12.59-142-PM-hibernate-Emit-an-error-when-image-writing.patch
+	patches.kernel.org/6.12.59-143-PM-hibernate-Use-atomic64_t-for-compressed_si.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
