--- a/series.conf
+++ b/series.conf
@@ -12174,6 +12174,7 @@
 	patches.kernel.org/6.12.59-053-net_sched-act_connmark-use-RCU-in-tcf_connmar.patch
 	patches.kernel.org/6.12.59-054-net-sched-act_connmark-initialize-struct-tc_i.patch
 	patches.kernel.org/6.12.59-055-net-sched-act_ife-initialize-struct-tc_ife-to.patch
+	patches.kernel.org/6.12.59-056-net-mlx5e-Fix-maxrate-wraparound-in-threshold.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
