NFSD: Skip close replay processing if XDR encoding fails (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12156,6 +12156,7 @@
 	patches.kernel.org/6.12.59-035-net-phy-micrel-Replace-hardcoded-pages-with-d.patch
 	patches.kernel.org/6.12.59-036-net-phy-micrel-lan8814-fix-reset-of-the-QSGMI.patch
 	patches.kernel.org/6.12.59-037-rust-Add-fno-isolate-erroneous-paths-derefere.patch
+	patches.kernel.org/6.12.59-038-NFSD-Skip-close-replay-processing-if-XDR-enco.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
