--- a/series.conf
+++ b/series.conf
@@ -12245,6 +12245,7 @@
 	patches.kernel.org/6.12.59-124-fs-proc-fix-uaf-in-proc_readdir_de.patch
 	patches.kernel.org/6.12.59-125-mm-mm_init-fix-hash-table-order-logging-in-al.patch
 	patches.kernel.org/6.12.59-126-mm-shmem-fix-THP-allocation-and-fallback-loop.patch
+	patches.kernel.org/6.12.59-127-mmc-sdhci-of-dwcmshc-Change-DLL_STRBIN_TAPNUM.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
