--- a/series.conf
+++ b/series.conf
@@ -12276,6 +12276,7 @@
 	patches.kernel.org/6.12.59-155-selftests-mptcp-join-endpoints-longer-transfe.patch
 	patches.kernel.org/6.12.59-156-selftests-mptcp-connect-trunc-read-all-recv-d.patch
 	patches.kernel.org/6.12.59-157-selftests-mptcp-join-userspace-longer-transfe.patch
+	patches.kernel.org/6.12.59-158-selftests-mptcp-join-properly-kill-background.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
