NFSv4: Fix an incorrect parameter when calling nfs4_call_sync() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12196,6 +12196,7 @@
 	patches.kernel.org/6.12.59-075-simplify-nfs_atomic_open_v23.patch
 	patches.kernel.org/6.12.59-076-NFSv2-v3-Fix-error-handling-in-nfs_atomic_ope.patch
 	patches.kernel.org/6.12.59-077-NFS-sysfs-fix-leak-when-nfs_client-kobject-ad.patch
+	patches.kernel.org/6.12.59-078-NFSv4-Fix-an-incorrect-parameter-when-calling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
