KVM: VMX: Split out guts of EPT violation to common/exposed function (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12287,6 +12287,7 @@
 	patches.kernel.org/6.12.59-166-net-netpoll-Individualize-the-skb-pool.patch
 	patches.kernel.org/6.12.59-167-net-netpoll-flush-skb-pool-during-cleanup.patch
 	patches.kernel.org/6.12.59-168-net-netpoll-fix-incorrect-refcount-handling-c.patch
+	patches.kernel.org/6.12.59-169-KVM-VMX-Split-out-guts-of-EPT-violation-to-co.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
