net/mlx5e: Fix potentially misleading debug message (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12176,6 +12176,7 @@
 	patches.kernel.org/6.12.59-055-net-sched-act_ife-initialize-struct-tc_ife-to.patch
 	patches.kernel.org/6.12.59-056-net-mlx5e-Fix-maxrate-wraparound-in-threshold.patch
 	patches.kernel.org/6.12.59-057-net-mlx5e-Fix-wraparound-in-rate-limiting-for.patch
+	patches.kernel.org/6.12.59-058-net-mlx5e-Fix-potentially-misleading-debug-me.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
