sched_ext: Fix unsafe locking in the scx_dump_state() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12214,6 +12214,7 @@
 	patches.kernel.org/6.12.59-093-mtd-onenand-Pass-correct-pointer-to-IRQ-handl.patch
 	patches.kernel.org/6.12.59-094-virtio-fs-fix-incorrect-check-for-fsvq-kobj.patch
 	patches.kernel.org/6.12.59-095-fs-namespace-correctly-handle-errors-returned.patch
+	patches.kernel.org/6.12.59-096-sched_ext-Fix-unsafe-locking-in-the-scx_dump_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
