selftests: mptcp: join: rm: set backup flag (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12272,6 +12272,7 @@
 	patches.kernel.org/6.12.59-151-pmdomain-imx-Fix-reference-count-leak-in-imx_.patch
 	patches.kernel.org/6.12.59-152-pmdomain-samsung-plug-potential-memleak-durin.patch
 	patches.kernel.org/6.12.59-153-selftests-mptcp-connect-fix-fallback-note-due.patch
+	patches.kernel.org/6.12.59-154-selftests-mptcp-join-rm-set-backup-flag.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
