--- a/series.conf
+++ b/series.conf
@@ -12168,6 +12168,7 @@
 	patches.kernel.org/6.12.59-047-net-ethernet-ti-am65-cpsw-qos-fix-IET-verify-.patch
 	patches.kernel.org/6.12.59-048-net-ethernet-ti-am65-cpsw-qos-fix-IET-verify-.patch
 	patches.kernel.org/6.12.59-049-tipc-Fix-use-after-free-in-tipc_mon_reinit_se.patch
+	patches.kernel.org/6.12.59-050-net-mdio-fix-resource-leak-in-mdiobus_registe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
