drm/xe: Move declarations under conditional branch (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12126,6 +12126,7 @@
 	patches.kernel.org/6.12.59-005-iommufd-Make-vfio_compat-s-unmap-succeed-if-t.patch
 	patches.kernel.org/6.12.59-006-drm-amd-Fix-suspend-failure-with-secure-displ.patch
 	patches.kernel.org/6.12.59-007-drm-xe-guc-Synchronize-Dead-CT-worker-with-un.patch
+	patches.kernel.org/6.12.59-008-drm-xe-Move-declarations-under-conditional-br.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
