--- a/series.conf
+++ b/series.conf
@@ -12146,6 +12146,7 @@
 	patches.kernel.org/6.12.59-025-exfat-fix-improper-check-of-dentry.stream.val.patch
 	patches.kernel.org/6.12.59-026-smb-server-fix-possible-memory-leak-in-smb2_r.patch
 	patches.kernel.org/6.12.59-027-smb-server-fix-possible-refcount-leak-in-smb2.patch
+	patches.kernel.org/6.12.59-028-HID-logitech-hidpp-Add-HIDPP_QUIRK_RESET_HI_R.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
