--- a/series.conf
+++ b/series.conf
@@ -12167,6 +12167,7 @@
 	patches.kernel.org/6.12.59-046-net-handshake-Fix-memory-leak-in-tls_handshak.patch
 	patches.kernel.org/6.12.59-047-net-ethernet-ti-am65-cpsw-qos-fix-IET-verify-.patch
 	patches.kernel.org/6.12.59-048-net-ethernet-ti-am65-cpsw-qos-fix-IET-verify-.patch
+	patches.kernel.org/6.12.59-049-tipc-Fix-use-after-free-in-tipc_mon_reinit_se.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
