ext4: fix out-of-bound read in ext4_xattr_inode_dec_ref_all() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12207,6 +12207,7 @@
 	patches.kernel.org/6.12.59-086-proc-fix-the-issue-of-proc_mem_open-returning.patch
 	patches.kernel.org/6.12.59-087-ext4-introduce-ITAIL-helper.patch
 	patches.kernel.org/6.12.59-088-lib-crypto-arm-curve25519-Disable-on-CPU_BIG_.patch
+	patches.kernel.org/6.12.59-089-ext4-fix-out-of-bound-read-in-ext4_xattr_inod.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
