--- a/series.conf
+++ b/series.conf
@@ -12165,6 +12165,7 @@
 	patches.kernel.org/6.12.59-044-sctp-prevent-possible-shift-out-of-bounds-in-.patch
 	patches.kernel.org/6.12.59-045-net-smc-fix-mismatch-between-CLC-header-and-p.patch
 	patches.kernel.org/6.12.59-046-net-handshake-Fix-memory-leak-in-tls_handshak.patch
+	patches.kernel.org/6.12.59-047-net-ethernet-ti-am65-cpsw-qos-fix-IET-verify-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
