--- a/series.conf
+++ b/series.conf
@@ -430,6 +430,7 @@
 	patches.suse/riscv-add-PREEMPT_LAZY-support.patch
 	patches.suse/sched-No-PREEMPT_RT-y-for-all-yes-mod-config.patch
 	patches.suse/sched-x86-Update-the-comment-for-TIF_NEED_RESCHED_LAZY.patch
+	patches.suse/x86-split_lock-Move-Split-and-Bus-lock-code-to-a-dedicated.patch
 	patches.suse/hrtimer-Use-__raise_softirq_irqoff-to-raise-the-softirq.patch
 	patches.suse/timers-Use-__raise_softirq_irqoff-to-raise-the-softirq.patch
 	patches.suse/softirq-Use-a-dedicated-thread-for-timer-wakeups-on-PREEMPT_RT.patch
